--- a/css/projects.css
+++ b/css/projects.css
@@ -64,6 +64,7 @@ nav ul li a:hover {
     max-width: 1000px;
     margin: 20px auto; /* Added margin for spacing */
     padding-top: 10px; /* Added padding to move content down */
+    margin-bottom: 5px;
 }
 
 .project-gallery {
@@ -101,8 +102,6 @@ nav ul li a:hover {
 }
 
 footer {
-    background-color: #333;
-    color: white;
     text-align: center;
     padding: 1em;
 }
