--- a/css/about.css
+++ b/css/about.css
@@ -291,7 +291,7 @@ footer {
 }
 @media screen and (max-width: 768px) {
     .social-icons i {
-        font-size: 2rem; /* Smaller size for mobile */
+        font-size: 10rem !important; /* Smaller size for mobile */
         padding: 10px;   /* Reduced padding for spacing */
         margin: 0 5px;   /* Adjust margin for spacing */
     }
