--- a/css/about.css
+++ b/css/about.css
@@ -280,25 +280,14 @@ footer {
     color: white; /* Ensure text color consistency */
     margin-top: 0.5em; /* Adjust top margin if necessary */
 }
-.social-icons i {
-    font-size: calc(3vw + 1rem); /* Dynamically adjust font size based on viewport width */
-    margin: 0 10px;
-}
-
-.social-icons a {
-    display: inline-block;
-    width: auto; /* Ensure the icon maintains its responsive size */
-}
-
 @media screen and (max-width: 768px) {
     .social-icons i {
-        font-size: calc(5vw + 0.5rem); /* Adjust for smaller screens */
+        font-size: var(--fa-sm);
     }
 }
 
 @media screen and (max-width: 480px) {
     .social-icons i {
-        font-size: calc(6vw + 0.5rem); /* Further adjust for very small screens */
-        margin: 0 5px; /* Reduce spacing */
+        font-size: var(--fa-xs);
     }
 }
