--- a/css/common.css
+++ b/css/common.css
@@ -6,6 +6,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
     color: white;
+    width: 100%;
+    box-sizing: border-box; /* Includes padding and borders in width calculations */
 }
 
 header {
