--- a/css/about.css
+++ b/css/about.css
@@ -628,10 +628,7 @@ footer {
             width: 600px;
         }
         .social-icons i.fa {
-            font-size: 20px !important; /* Force a smaller size for all icons */
-            padding: 8px !important; /* Adjust padding to match icon size */
-            width: 40px !important; /* Force width of icons */
-            height: 40px !important; /* Ensure the height adjusts as well */
+            font-size: 1rem;
         }
     }   
 }   
