--- a/css/about.css
+++ b/css/about.css
@@ -612,14 +612,17 @@ footer {
 
     .side-by-side-container {
         flex-direction: column; /* Stack elements vertically */
+        align-items: center;
         gap: 20px; /* Add spacing between stacked elements */
         margin: 0; /* Reset margins */
     }
 
-    .google-form iframe{
-        width: 600px;
+    .google-form iframe,
+    .google-drive-pdf iframe {
+        width: 100%; /* Set width to 100% of the container */
+        height: auto; /* Allow height to scale proportionally */
+        min-height: 400px; /* Set a reasonable minimum height for readability */
     }
-
     .social-icons i {
         font-size: 2rem !important;
         margin: 0 5px !important;
