--- a/css/about.css
+++ b/css/about.css
@@ -615,13 +615,16 @@ footer {
         align-items: center;
         gap: 20px; /* Add spacing between stacked elements */
         margin: 0; /* Reset margins */
+        width: 100%;
     }
 
     .google-form iframe,
     .google-drive-pdf iframe {
-        width: 100%; /* Set width to 100% of the container */
+        width: 90%; /* Set width to 100% of the container */
+        max-width: 100%;
         height: auto; /* Allow height to scale proportionally */
         min-height: 400px; /* Set a reasonable minimum height for readability */
+        border: none;
     }
     .social-icons i {
         font-size: 2rem !important;
