--- a/css/about.css
+++ b/css/about.css
@@ -587,6 +587,25 @@ footer {
     margin-top: 0.5em; /* Adjust top margin if necessary */
 
 }
+
+.pdf-container {
+    width: 100%; /* Takes full width of its container */
+    max-width: 800px; /* Set a max width to prevent overexpansion */
+    height: 0;
+    padding-bottom: 75%; /* Maintain aspect ratio (adjust as needed) */
+    position: relative; /* Required for absolutely positioning the child */
+}
+
+.pdf-container object {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+
 @media (max-width: 600px) {
     .about-content {
         flex-direction: column; /* Stack elements vertically */
